--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -7,6 +7,7 @@
     "highcharts-react-official": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0"
   },
   "scripts": {
